# Tesla-Financial-Intelligence-System

./: .gitignore  README.md  app.py  main.py  pyproject.toml  query_engine.ipynb  query_engine.py  requirements.txt
config/: parameters.yaml
generation/: generator.py
ingestion/chunking_strategy/: data_chunking.ipynb  data_chunking.py
ingestion/document_loader/: extracting_pdf_file.py
ingestion/embedding_generator/: data_embedding.py
ingestion/text_cleaning/: data_cleaning.ipynb  data_cleaning.py
pipeline/chunking_strategy/: data_chunking.ipynb  data_chunking.py
pipeline/document_loader/: extracting_pdf_file.ipynb  extracting_pdf_file.py
pipeline/embedding_generator/: data_embedding.py
pipeline/text_cleaning/: data_cleaning.ipynb  data_cleaning.py
retrieval/: retriever.py
